--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@slack/client": "^3.9.0",
+    "cron": "^1.2.1",
     "express": "^4.15.2",
+    "moment": "^2.18.1",
     "request": "^2.81.0"
   }
 }
